Fix making the chat input field stand out on small screens

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -44,10 +44,9 @@ $sidebar-item-icon-width: 1.5rem;
   --input-disabled-color: #6f6f6f;
   --input-placeholder-color: #8e8e8e;
   --input-focus-placeholder-color: #bbb;
+  --chat-input-bg: #e8e8e8;
   --chat-input-border: 0;
-  --chat-input-border-top: 0;
   --chat-input-border-radius: 8px;
-  --chat-input-box-shadow: 0px 1px 2px 1px inset rgba(0, 0, 0, .2);
   --autocomplete-bg: #fbfbfb;
   --autocomplete-border: 1px solid #888;
   --autocomplete-focus: inherit;
