--- a/public/themes/desert.css
+++ b/public/themes/desert.css
@@ -15,6 +15,7 @@
   --button-disabled-bg: #95867d ;
   --button-focus-outline: 1px solid #95867d;
   --autocomplete-focus-bg: #ddd4bc;
+  --chat-input-bg: #e8e1cd;
   --sidebar-left-bg: #eee8d5;
   --sidebar-left-border: 1px solid #d5d2d0;
   --sidebar-left-frozen-color: #77675c;
