--- a/public/themes/high-contrast_color-scheme-dark.css
+++ b/public/themes/high-contrast_color-scheme-dark.css
@@ -17,6 +17,7 @@
   --button-border: 1px solid #bb0000;
   --button-danger-bg: #990000;
   --input-bg: #eee;
+  --chat-input-bg: #000;
   --button-disabled-bg: #440000;
   --button-disabled-border: #373737;
   --button-focus-outline: 1px solid #ff9999;
