--- a/public/themes/south.css
+++ b/public/themes/south.css
@@ -18,6 +18,7 @@
   --button-disabled-border: #373737;
   --button-focus-outline: 1px solid #ba8c58;
   --input-focus-outline: 2px dotted #eee;
+  --chat-input-bg: #e8eef0;
   --autocomplete-focus: #eeeeee;
   --autocomplete-focus-bg: #333333;
   --sidebar-right-bg: #f9f9f9;
